# oracles

./: .dockerignore  .gitignore  Cargo.toml  Config.example.toml  Dockerfile  README.md  SKILL.md
.githooks/: pre-commit
.github/workflows/: crates-publish.yml  docker-publish.yml  docs.yml  lint.yml  test.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: configuration.md  getting-started.md  usage.md
docs/reference/: operations.md  responses.md
examples/: minimal.rs  run_once.rs
migrations/postgres/: 001_oracle_rates.sql  002_oracle_events.sql  003_oracle_outbox.sql  README.md
migrations/sqlite/: 001_oracle_rates.sql  002_oracle_events.sql  003_oracle_outbox.sql  README.md
src/: error.rs  lib.rs  logging.rs  main.rs  prelude.rs  sql.rs  x402.rs
src/cli/: args.rs  mod.rs
src/config/: env.rs  load.rs  mod.rs  raw.rs  resolved.rs  validate.rs
src/domain/: decimal.rs  decision.rs  event.rs  ids.rs  mod.rs  rate.rs
src/engine/: mod.rs  oracle.rs  scheduler.rs
src/events/: dispatcher.rs  mod.rs  template.rs
src/events/sinks/: log.rs  mod.rs  telegram.rs  webhook.rs
src/provider/: http_json.rs  json_path.rs  mod.rs  static_provider.rs  template.rs
src/safety/: mod.rs
src/store/: migration.rs  mod.rs  postgres.rs  sqlite.rs
tests/: config_parse.rs  config_validate.rs  config_validation_full.rs  engine_full.rs  engine_static.rs  http_json_provider.rs  logging_full.rs  safety.rs  safety_full.rs  sqlite_store.rs  template.rs  universal_config.rs
tests/fixtures/: coingecko_eth.json  diadata_eth.json
